fixed sidebar navigation button

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -138,4 +138,12 @@
   @media (min-width: breakpoint.$desktop) {
     display: flex;
   }
+
+  & img {
+    transition: transform ease-in-out 300ms;
+  }
+
+  &.isCollapsed img {
+    transform: rotate(180deg);
+  }
 }
