--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -15,9 +15,9 @@
     height: 100vh;
   }
 
-  &.isCollapsed {
+  &.isCOllapsed {
     @media (min-width: breakpoint.$desktop) {
-      width: 5.1875rem;
+      width: 3rem;
     }
   }
 }
