--- a/features/projects/components/project-list/project-list.module.scss
+++ b/features/projects/components/project-list/project-list.module.scss
@@ -15,3 +15,36 @@
     grid-template-columns: repeat(auto-fit, 400px);
   }
 }
+
+.loaderwrapper {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  height: 100vh; /* Full height to center it vertically in the viewport */
+  // margin-top: 0px;
+
+  @media (min-width: breakpoint.$desktop) {
+    margin-top: -300px;
+  }
+}
+
+.loader {
+  border: 8px solid #f9f5ff; /* Light grey */
+  border-top: 8px solid #7f56d9; /* Blue */
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+// try less margin-top on desktop
