added the ui and stories for the various buttons.

--- a/styles/font.scss
+++ b/styles/font.scss
@@ -29,6 +29,12 @@ $text-md-medium:
 $text-md-semibold:
   600 1rem/1.5rem inter,
   sans-serif;
+$text-lg-regular:
+  400 1.125rem/1.75rem inter,
+  sans-serif; // 18px font size
+$text-lg-medium:
+  500 1.125rem/1.75rem inter,
+  sans-serif; // 18px font size, medium weight
 
 /* Display */
 $display-sm-regular:
