--- a/styles/color.scss
+++ b/styles/color.scss
@@ -1,64 +1,118 @@
-/* Gray */
-$gray-25: #fcfcfd;
-$gray-50: #f9fafb;
-$gray-100: #f2f4f7;
-$gray-200: #e4e7ec;
-$gray-300: #d0d5dd;
-$gray-400: #98a2b3;
-$gray-500: #667085;
-$gray-600: #475467;
-$gray-700: #344054;
-$gray-800: #1d2939;
-$gray-900: #101828;
+// /* Gray */
+// $gray-25: #fcfcfd;
+// $gray-50: #f9fafb;
+// $gray-100: #f2f4f7;
+// $gray-200: #e4e7ec;
+// $gray-300: #d0d5dd;
+// $gray-400: #98a2b3;
+// $gray-500: #667085;
+// $gray-600: #475467;
+// $gray-700: #344054;
+// $gray-800: #1d2939;
+// $gray-900: #101828;
 
-/* Primary */
+// /* Primary */
+// $primary-25: #fcfaff;
+// $primary-50: #f9f5ff;
+// $primary-100: #f4ebff;
+// $primary-200: #e9d7fe;
+// $primary-300: #d6bbfb;
+// $primary-400: #b692f6;
+// $primary-500: #9e77ed;
+// $primary-600: #7f56d9;
+// $primary-700: #6941c6;
+// $primary-800: #53389e;
+// $primary-900: #42307d;
+
+// /* Error */
+// $error-25: #fffbfa;
+// $error-50: #fef3f2;
+// $error-100: #fee4e2;
+// $error-200: #fecdca;
+// $error-300: #fda29b;
+// $error-400: #f97066;
+// $error-500: #f04438;
+// $error-600: #d92d20;
+// $error-700: #b42318;
+// $error-800: #912018;
+// $error-900: #7a271a;
+
+// /* Warning */
+// $warning-25: #fffcf5;
+// $warning-50: #fffaeb;
+// $warning-100: #fef0c7;
+// $warning-200: #fedf89;
+// $warning-300: #fec84b;
+// $warning-400: #fdb022;
+// $warning-500: #f79009;
+// $warning-600: #dc6803;
+// $warning-700: #b54708;
+// $warning-800: #93370d;
+// $warning-900: #7a2e0e;
+
+// /* Success */
+// $success-25: #f6fef9;
+// $success-50: #ecfdf3;
+// $success-100: #d1fadf;
+// $success-200: #a6f4c5;
+// $success-300: #6ce9a6;
+// $success-400: #32d583;
+// $success-500: #12b76a;
+// $success-600: #039855;
+// $success-700: #027a48;
+// $success-800: #05603a;
+// $success-900: #054f31;
+
 $primary-25: #fcfaff;
-$primary-50: #f9f5ff;
-$primary-100: #f4ebff;
-$primary-200: #e9d7fe;
-$primary-300: #d6bbfb;
-$primary-400: #b692f6;
-$primary-500: #9e77ed;
-$primary-600: #7f56d9;
-$primary-700: #6941c6;
-$primary-800: #53389e;
-$primary-900: #42307d;
-
-/* Error */
-$error-25: #fffbfa;
-$error-50: #fef3f2;
-$error-100: #fee4e2;
-$error-200: #fecdca;
-$error-300: #fda29b;
-$error-400: #f97066;
-$error-500: #f04438;
-$error-600: #d92d20;
-$error-700: #b42318;
-$error-800: #912018;
-$error-900: #7a271a;
-
-/* Warning */
-$warning-25: #fffcf5;
-$warning-50: #fffaeb;
-$warning-100: #fef0c7;
-$warning-200: #fedf89;
-$warning-300: #fec84b;
-$warning-400: #fdb022;
-$warning-500: #f79009;
-$warning-600: #dc6803;
-$warning-700: #b54708;
-$warning-800: #93370d;
-$warning-900: #7a2e0e;
-
-/* Success */
-$success-25: #f6fef9;
-$success-50: #ecfdf3;
-$success-100: #d1fadf;
-$success-200: #a6f4c5;
-$success-300: #6ce9a6;
-$success-400: #32d583;
-$success-500: #12b76a;
-$success-600: #039855;
-$success-700: #027a48;
-$success-800: #05603a;
-$success-900: #054f31;
+$primary-50: #eef2ff;
+$primary-100: #e0e7ff;
+$primary-200: #c7d2fe;
+$primary-300: #a5b4fc;
+$primary-400: #818cf8;
+$primary-500: #6366f1;
+$primary-600: #4f46e5;
+$primary-700: #4338ca;
+$primary-800: #3730a3;
+$primary-900: #312e81;
+$gray-50: #f9fafb;
+$gray-100: #f3f4f6;
+$gray-200: #e5e7eb;
+$gray-300: #d1d5db;
+$gray-400: #9ca3af;
+$gray-500: #6b7280;
+$gray-600: #4b5563;
+$gray-700: #374151;
+$gray-800: #1f2937;
+$gray-900: #111827;
+$error-50: #fef2f2;
+$error-100: #fee2e2;
+$error-200: #fecaca;
+$error-300: #fca5a5;
+$error-400: #f87171;
+$error-500: #ef4444;
+$error-600: #dc2626;
+$error-700: #b91c1c;
+$error-800: #991b1b;
+$error-900: #7f1d1d;
+$success-50: #f0fdf4;
+$success-100: #dcfce7;
+$success-200: #bbf7d0;
+$success-300: #86efac;
+$success-400: #4ade80;
+$success-500: #22c55e;
+$success-600: #16a34a;
+$success-700: #15803d;
+$success-800: #166534;
+$success-900: #14532d;
+$warning-50: #fffbeb;
+$warning-100: #fef3c7;
+$warning-200: #fde68a;
+$warning-300: #fcd34d;
+$warning-400: #fbbf24;
+$warning-500: #f59e0b;
+$warning-600: #d97706;
+$warning-700: #b45309;
+$warning-800: #92400e;
+$warning-900: #78350f;
+$black-000: #000;
+$white-000: #fff;
