--- a/styles/color.scss
+++ b/styles/color.scss
@@ -84,17 +84,17 @@ $gray-600: #4b5563;
 $gray-700: #374151;
 $gray-800: #1f2937;
 $gray-900: #111827;
-$error-50: #fef2f2;
+$error-50: #fef3f2;
 $error-100: #fee2e2;
 $error-200: #fecaca;
 $error-300: #fca5a5;
 $error-400: #f87171;
 $error-500: #ef4444;
 $error-600: #dc2626;
-$error-700: #b91c1c;
+$error-700: #b42318;
 $error-800: #991b1b;
 $error-900: #7f1d1d;
-$success-50: #f0fdf4;
+$success-50: #ecfdf3;
 $success-100: #dcfce7;
 $success-200: #bbf7d0;
 $success-300: #86efac;
@@ -104,7 +104,7 @@ $success-600: #16a34a;
 $success-700: #15803d;
 $success-800: #166534;
 $success-900: #14532d;
-$warning-50: #fffbeb;
+$warning-50: #fffaeb;
 $warning-100: #fef3c7;
 $warning-200: #fde68a;
 $warning-300: #fcd34d;
