--- a/styles/space.scss
+++ b/styles/space.scss
@@ -13,7 +13,11 @@
 // $s24: 6rem;
 
 $s0: 0;
+$s0-m: 0.063rem; // 1px
+$s0-l: 0.125rem; // 2px
+$s1-s: 0.188; // 3px
 $s1: 0.25rem; // 4px
+$s1-l: 0.375rem; // 6px
 $s2: 0.5rem; // 8px
 $s2-l: 0.625rem; // 10px
 $s3: 0.75rem; // 12px
